@@ -1837,7 +1837,19 @@ struct LF_EXPORT lfDatabase
      *     A pointer to an allocated string with the XML data.
      *     Free it with lf_free().
      */
-    char *Save () const;
+    DEPRECATED char *Save () const;
+
+        /**
+     * @brief Save the database into a XML char string. The memory of the received
+     *     char string has to be released with lf_free().
+     * @param xml
+     *     Reference to a char pointer where the XML string will be stored.
+     * @param data_size
+     *     Length of the written char string.
+     * @return
+     *     LF_NO_ERROR or a error code.
+     */
+    lfError Save (char*& xml, size_t& data_size) const;
 
     /**
      * @brief Find a set of cameras that fit given criteria.
@@ -2111,8 +2123,8 @@ LF_EXPORT lfError lf_db_load_str (lfDatabase *db, const char *xml, size_t data_s
 /** @sa lfDatabase::Save(const char *) */
 LF_EXPORT lfError lf_db_save_all (const lfDatabase *db, const char *filename);
 
-/** @sa lfDatabase::Save() */
-LF_EXPORT char *lf_db_save_str (const lfDatabase *db);
+/** @sa lfDatabase::Save(char*& xml, size_t& data_size) */
+LF_EXPORT lfError lf_db_save_str (const lfDatabase *db, char **xml, size_t* data_size);
 
 /** @sa lfDatabase::FindCameras */
 LF_EXPORT const lfCamera **lf_db_find_cameras (
