@@ -876,6 +876,14 @@ lfError lfDatabase::Save (const char *filename) const
 
 char *lfDatabase::Save () const
 {
+    size_t len = 0;
+    char* xml = nullptr;
+    Save(xml, len);
+    return xml;
+}
+
+lfError lfDatabase::Save (char*& xml, size_t& data_size) const
+{
     /* Temporarily drop numeric format to "C" */
     char *old_numeric = setlocale (LC_NUMERIC, NULL);
     old_numeric = strdup(old_numeric);
@@ -1118,8 +1126,10 @@ char *lfDatabase::Save () const
     setlocale (LC_NUMERIC, old_numeric);
     free(old_numeric);
 
-    return g_string_free (output, FALSE);
-    return 0;
+    data_size = output->len;    
+    xml = g_string_free (output, FALSE);
+
+    return LF_NO_ERROR;
 }
 
 int __find_camera_compare (lfCamera *a, lfCamera *b)
@@ -1595,9 +1605,9 @@ lfError lf_db_save_all (const lfDatabase *db, const char *filename)
     return db->Save (filename);
 }
 
-char *lf_db_save_str (const lfDatabase *db)
+lfError lf_db_save_str (const lfDatabase *db, char **xml, size_t* data_size)
 {
-    return db->Save ();
+    return db->Save (*xml, *data_size);
 }
 
 const lfCamera **lf_db_find_cameras (const lfDatabase *db,
